# wedding_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/wedding_backend/: main.py
tests/: test_guests_phone.py
